[package]
name = "rush"
version = "0.0.1"
authors = ["James Mracek <james.a.mracek@gmail.com>"]
edition = "2018"

[lib]
name = "rush"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.8.0"
itertools = "0.10.1"
paste = "1.0.5"

[[bench]]
name = "simdlib_bench"
harness = false
