[package]
name = "rush"
version = "0.0.1"
authors = ["James Mracek <james.a.mracek@gmail.com>"]
edition = "2018"

[lib]
name = "rush"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
atoi = "0.4.0"
byteorder = "1.4.3"
bytes = "1.1.0"
itertools = "0.10.1"
paste = "1.0.5"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.26"


[[bench]]
name = "simdlib_bench"
harness = false
